[package]
name = "core-graphics2"
description = "Safe bindings to CoreGraphics framework, including display stream"
homepage = "https://github.com/libark/core-graphics-rs"
repository = "https://github.com/libark/core-graphics-rs"
documentation = "https://docs.rs/core-graphics2"
version = "0.1.2"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["graphics", "multimedia", "os::macos-apis"]
keywords = ["coregraphics", "display", "displaystream", "screencapture"]
edition = "2018"

[dependencies]
bitflags = "2.5"
block2 = "0.5"
cfg-if = "1.0"
core-foundation = { version = "0.9", default-features = false }
dispatch2 = { version = "0.1", optional = true }
io-surface = { version = "0.15", optional = true }
libc = "0.2"
metal = { version = "0.28", optional = true }
objc2 = { version = "0.5", optional = true }

[dev-dependencies]
core-video = "0.3"

[features]
default = ["display", "display-stream", "event", "link", "window"]
display = []
display-stream = ["dispatch2", "display", "io-surface", "objc"]
event = []
link = ["core-foundation/link"]
objc = ["objc2"]
window = []

[[example]]
name = "display_stream"

[package.metadata.docs.rs]
no-default-features = true
features = ["display", "display-stream", "event", "objc", "window"]
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
